Work on answers

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
   <div class="questions">
     <h2>Let's start with your Name</h2>
     <input id="name" placeholder="Enter Your Name Here">
-    <h2> Would you rather spend the day reading, coding, playing a sport or designing clothing?</h2>
-    <input id="question1" placeholder="Reading, Coding, Sports, Designing">
-    <h2> Which would you rather disappear from earh forever: Waffles, Pancakes, or French Toast?</h2>
-    <input id="question2" placeholder="Pancakes, Waffles, or French Toast">
-    <h2>What is your favorite animal?</h2>
-    <input id="question3" placeholder="Mine is a Duck">
+    <h2> Which of the following characteristics best suit you?</h2>
+    <input id="question1" placeholder="Shy, Mysterious, Observative">
+    <h2>How known are you in school, family, or workplace?</h2>
+    <input id="question2" placeholder="Very known">
+    <h2>What genre most appeals to you?</h2>
+    <input id="question3" placeholder="Myth">
   </div>
   <div class="result">
-    <button>Click here to land your dream job!</button>
+    <button>Click to find out which riverdalian you are</button>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src='js/script.js'></script>
