WORK ON JAVASCRIPT

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div class="header">
-    <div><img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/BuzzFeed.svg/1280px-BuzzFeed.svg.png"></div>
+    <div><img class="logo" src=""></div>
     <div>News</div>
     <div>Videos</div>
     <div>Quizes</div>
@@ -18,10 +18,9 @@
   </div>
   <h1>Which Tech Company is the Perfect Fit for You?</h1>
   <p id="caption">With dedication, you'll be there before you know it. </p>
-  <img id="tomImg" src="http://th.downloadblog.it/jSwEBLI80OIF2oYywP73GVj3zCo=/fit-in/655xorig/http%3A%2F%2Fmedia.downloadblog.it%2F5%2F57d%2Ftom-di-myspace.jpg">
-  <a href="https://en.wikipedia.org/wiki/Tom_Anderson">Tom Anderson</a>
+  <img id="tomImg" src="">Joseph Ramos</a>
   <div id="tom">Buzzfeed Contributor</div>
-  <img class="siliconValley" src="https://www.hbo.com/content/dam/hbodata/series/silicon-valley/episodes/s3/silicon-valley-3-3000x1688.jpg/_jcr_content/renditions/cq5dam.web.1200.675.jpeg">
+  <img class="riverdale" src="https://i.pinimg.com/originals/c7/d9/62/c7d962d494b1a837f1b374f436764c27.jpg">
   <div class="questions">
     <h2>Let's start with your Name</h2>
     <input id="name" placeholder="Enter Your Name Here">
